--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, 'About Us') %>
 <h1>About Us</h1>
 <p>
-  The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  is a project to make a book and screencasts to teach web development
-  with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-  is the sample application for the tutorial.
+The intent with this app is to provide a space to store the names of your favourite songs in such a way that you could link to them all over the web.
+
+Really, this is just an excuse for me to write my first web app :)
 </p>
