got prof pics working

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,7 +12,7 @@
   </div>  
 <% else %>
   <div class="center hero-unit">
-    <h1>Welcome to the Music App</h1>
+    <h1>Welcome to the Tips/Clique/Plug-it</h1>
 
     <h2>
       This is the home page for George's Marvelous Music App! 
