--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 	<aside class="span4">
 		<section>
 			<h1>
-  				<%= gravatar_for @user %>
+  				<%= image_tag @user.profilepic_url.to_s %>
   				<%= @user.name %>
 			</h1>
 		</section>
