--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,6 +5,6 @@
   <!-- <%= gravatar_for user %> -->
   <%= link_to user.name, user %>
   <% if current_user.admin? && !current_user?(user) %>
-    | <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
+  	<%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
   <% end %>
 </li>
